Add database interactions and tests

--- a/MealPlanner/nbproject/project.properties
+++ b/MealPlanner/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MealPlanner
 endorsed.classpath=
 excludes=
+file.reference.junit-4.10.jar-1=../junit-4.10.jar
 file.reference.ojdbc8.jar=..\\ojdbc8.jar
 includes=**
 jar.compress=false
@@ -52,7 +53,8 @@ javac.source=16
 javac.target=16
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.junit-4.10.jar-1}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
