--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: [ macos-latest, windows-latest ]
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -18,4 +18,4 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Ant
-        run: ant -noinput -buildfile build.xml
+        run: ant -noinput -buildfile MealPlanner/build.xml
