--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
         run: 
           echo "package mealplanner;\n
           public class Secrets {\n
-          public static final String USERNAME = "<username>";\n
-          public static final String PASSWORD = "<password>";\n
-          public static final String JDBCDRIVER = "oracle.jdbc.driver.OracleDriver";\n
-          public static final String JDBCURL = "jdbc:oracle:thin:@<ip_address>:<port>:<database>";\n
+          public static final String USERNAME = \"<username>\";\n
+          public static final String PASSWORD = \"<password>\";\n
+          public static final String JDBCDRIVER = \"oracle.jdbc.driver.OracleDriver\";\n
+          public static final String JDBCURL = \"jdbc:oracle:thin:@<ip_address>:<port>:<database>\";\n
           }" > MealPlanner/src/mealplanner/Secrets.java
           ant -noinput -buildfile MealPlanner/build.xml
