--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,12 @@ jobs:
           
       - name: Create Secrets.java template
         run: 
-          echo "package mealplanner;\n
-          public class Secrets {\n
-          public static final String USERNAME = \"<username>\";\n
-          public static final String PASSWORD = \"<password>\";\n
-          public static final String JDBCDRIVER = \"oracle.jdbc.driver.OracleDriver\";\n
-          public static final String JDBCURL = \"jdbc:oracle:thin:@<ip_address>:<port>:<database>\";\n
+          echo "package mealplanner;
+          public class Secrets {
+          public static final String USERNAME = \"<username>\";
+          public static final String PASSWORD = \"<password>\";
+          public static final String JDBCDRIVER = \"oracle.jdbc.driver.OracleDriver\";
+          public static final String JDBCURL = \"jdbc:oracle:thin:@<ip_address>:<port>:<database>\";
           }" > MealPlanner/src/mealplanner/Secrets.java
           
       - name: Build and Test with Ant
